--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>WhiteDay Coupon</title>
 </head>
 
 <body>
   <div class="continer css-selector">
     <div class="inner">
-      <div style="flex-grow:2">❤️</div>
+      <div style="flex-grow:1">🤍</div>
       <div style="flex-grow:6">
         <p>
-          White Day Coupon
+          WhiteDay Coupon
         </p>
         <p class="text">欲しいものかってあげる</p>
         <p class="text">有効期限：2021/12/31まで</p>
       </div>
-      <div style="flex-grow:2">❤️</div>
+      <div style="flex-grow:1">🤍</div>
     </div>
   </div>
 </body>
@@ -47,7 +47,7 @@
   }
 
   .inner>div {
-    padding: 20px;
+    padding: 10px;
     text-align: center;
     color: white;
     font-size: 50px;
